<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/Header1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/set_password"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description"
        style="@style/Paragraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/set_password_desctiption"
        app:layout_constraintBottom_toTopOf="@id/enterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterPassword"
        style="@style/CustomOutlineBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:hint="Password"
        android:theme="@style/CustomOutlineBox"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <!-- android:textColor="#fff" -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/continue_petro_loh"
        app:layout_constraintEnd_toEndOf="@id/enterPassword"
        app:layout_constraintStart_toStartOf="@id/enterPassword"
        app:layout_constraintTop_toBottomOf="@id/enterPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/checkLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/enterPassword">

        <TextView
            android:id="@+id/lowercase"
            style="@style/CheckItem"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/lowercase" />

        <TextView
            android:id="@+id/symbol"
            style="@style/CheckItem"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/symbol" />

        <TextView
            android:id="@+id/eight"
            style="@style/CheckItem"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/characters" />

        <TextView
            android:id="@+id/uppercase"
            style="@style/CheckItem"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/uppercase" />

        <TextView
            android:id="@+id/number"
            style="@style/CheckItem"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/number" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>